Removed unnecessary logging lines, renames page to selectLicenceType

--- a/server/views/pdf/createLicenceTaskList.pug
+++ b/server/views/pdf/createLicenceTaskList.pug
@@ -4,7 +4,7 @@ include ../taskList/includes/startContinueChangeButton
 block content
 
   div.back-link-container
-    a#backBtn.link-back(href="/hdc/pdf/offenceDate/" + bookingId) Back
+    a#backBtn.link-back(href="/hdc/pdf/selectLicenceType/" + bookingId) Back
 
   include ../includes/personalDetailsSummary
 
