--- a/server/views/pdf/selectLicenceType.pug
+++ b/server/views/pdf/selectLicenceType.pug
@@ -15,30 +15,31 @@ block content
     input(type="hidden" name="_csrf" value=csrfToken)
     input(type="hidden" name="bookingId" value=bookingId || '')
 
-    div(id="offenceBefore", class=Object.keys(errors).includes("offenceBefore") ? "form-group form-group-error inline" : "form-group inline")
-      div.multiple-choice(data-target="licenceTypeSelectionYes")
-        input#offenceBeforeYes(type="radio" name="offenceBeforeCutoff" value="Yes" checked=offenceBeforeCutoff === 'Yes')
-        label(for="offenceBeforeYes") Yes
-      div.multiple-choice(data-target="licenceTypeSelectionYes")
-        input#offenceBeforeNo(type="radio" name="offenceBeforeCutoff" value="No" checked=offenceBeforeCutoff === 'No')
-        label(for="offenceBeforeNo") No
+    div.largePaddingBottom
+      div(id="offenceBefore", class=Object.keys(errors).includes("offenceBefore") ? "form-group form-group-error inline" : "form-group inline")
+        div.multiple-choice(data-target="licenceTypeSelectionYes")
+          input#offenceBeforeYes(type="radio" name="offenceBeforeCutoff" value="Yes" checked=offenceBeforeCutoff === 'Yes')
+          label(for="offenceBeforeYes") Yes
+        div.multiple-choice(data-target="licenceTypeSelectionYes")
+          input#offenceBeforeNo(type="radio" name="offenceBeforeCutoff" value="No" checked=offenceBeforeCutoff === 'No')
+          label(for="offenceBeforeNo") No
 
-    div(id="licenceTypeRadioList", class=Object.keys(errors).includes("licenceTypeRadioList") ? "form-group form-group-error " : "")
-      div#licenceTypeSelectionYes.pure-u-1.pure-u-md-4-5.js-hidden.fieldset
-        h2.heading-large Licence Type
-        for template in templates
-          if template.validForOldOffence
-            div.multiple-choice
-              input(id=template.id type="radio" name="licenceTypeRadio" value=template.id checked=licenceTemplateId === template.id)
-              label(for=template.id) #{template.label}
-          else
-            div.multiple-choice.js-hidden.licence-type-for-no
-              input(id=template.id type="radio" name="licenceTypeRadio" value=template.id checked=licenceTemplateId === template.id)
-              label(for=template.id) #{template.label}
+      div(id="licenceTypeRadioList", class=Object.keys(errors).includes("licenceTypeRadioList") ? "form-group form-group-error " : "")
+        div#licenceTypeSelectionYes.pure-u-1.pure-u-md-4-5.js-hidden.fieldset
+          h2.heading-large Licence Type
+          for template in templates
+            if template.validForOldOffence
+              div.multiple-choice
+                input(id=template.id type="radio" name="licenceTypeRadio" value=template.id checked=licenceTemplateId === template.id)
+                label(for=template.id) #{template.label}
+            else
+              div.multiple-choice.js-hidden.licence-type-for-no
+                input(id=template.id type="radio" name="licenceTypeRadio" value=template.id checked=licenceTemplateId === template.id)
+                label(for=template.id) #{template.label}
 
     div.largePaddingBottom.smallPaddingTop
-          div.inlineButtons
-            input#continueButton.requiredButton.button(type="submit" value="Save and continue")
+      div.inlineButtons
+        input#continueButton.requiredButton.button(type="submit" value="Save and continue")
 
 block append scripts
   script(src="/public/javascripts/selectLicenceType.js?" + version)
