--- a/server/views/licences/vary_hdc_u12.pug
+++ b/server/views/licences/vary_hdc_u12.pug
@@ -22,7 +22,7 @@ html(lang="en")
           | manage your return into the community.
 
         li
-          | Your Home Detention Curfew commences on
+          | Your Home Detention Curfew commenced on
           =" "
           span.entry #{SENT_HDCAD}
           |  and expires on
@@ -37,20 +37,7 @@ html(lang="en")
           span.pre.entry #{CURFEW_ADDRESS}
           br
           br
-          | Details of curfew times are shown below at paragraph 6.
-
-        li
-          | On the day of your release, you will be curfewed at your curfew address from
-          =" "
-          span.entry #{CURFEW_FIRST_FROM}
-          |  until
-          =" "
-          span.entry #{CURFEW_FIRST_UNTIL}.
-          |  The contractor will visit you at this address during this time in order to fit you with the tag.
-          | You must show the contractor this copy of the licence to confirm your identity. Your curfew will then run until
-          | the curfew finish time the following morning. On your last day of curfew the contractor will visit you to remove
-          | the tag and monitoring equipment. This will take place in the last two hours of your last curfew period, i.e.
-          | between 10pm and midnight.
+          | Details of curfew times are shown below at paragraph 5.
 
         include includes/curfewTimes
 
@@ -64,9 +51,7 @@ html(lang="en")
           =" "
           span.entry #{SENT_SED}
 
-        div.pagebreak
-
         +contactPoints(MONITOR, EST_PHONE)
         br
         br
-        +signatures(APPROVER, CREATION_DATE, OFF_NAME)
+        +signatures(VARY_APPROVER, CREATION_DATE, OFF_NAME)
