--- a/server/views/licences/hdc_ap_pss.pug
+++ b/server/views/licences/hdc_ap_pss.pug
@@ -1,132 +1,121 @@
-include includes/licenceMixins
+extends licence
 
-doctype html
-html(lang="en")
-  head
-    link(href= "http://127.0.0.1:" + port + "/public/stylesheets/licences-pdf.css?" + version, media="print", rel="stylesheet", type="text/css")
+block heading
+  +heading('LICENCE AND NOTICE OF SUPERVISION')
 
-  body
+block content
+  ol.start
+    li
+      | Under the provisions of Chapter 6 of the Criminal Justice Act 2003 you are being released on licence followed
+      | by a post-sentence supervision period. You are being released on Home Detention Curfew (HDC) following which
+      | your licence will continue until the end of your sentence followed by a period of post-sentence supervision. The
+      | relevant purposes of each type of supervision are explained in the sections below.
 
-    block content
+    li
+      | Your Home Detention Curfew commences on
+      =" "
+      span.entry #{SENT_HDCAD}
+      |  and expires on
+      =" "
+      span.entry #{SENT_CRD}
 
-      +heading('LICENCE AND NOTICE OF SUPERVISION')
+    li
+      | Your supervision on licence commences on
+      =" "
+      span.entry #{SENT_HDCAD}
+      |  and expires on
+      =" "
+      span.entry #{SENT_LED}
+      |  unless this licence is previously revoked.
 
-      include includes/offender
+    li
+      | Your post-sentence supervision period commences on
+      =" "
+      span.entry #{SENT_LED}
+      |  and expires on
+      =" "
+      span.entry #{SENT_TUSED}
 
-      ol.start
-        li
-          | Under the provisions of Chapter 6 of the Criminal Justice Act 2003 you are being released on licence followed
-          | by a post-sentence supervision period. You are being released on Home Detention Curfew (HDC) following which
-          | your licence will continue until the end of your sentence followed by a period of post-sentence supervision. The
-          | relevant purposes of each type of supervision are explained in the sections below.
+    +reportOnRelease(REPORTING_NAME, REPORTING_ADDRESS, REPORTING_AT, REPORTING_ON)
 
-        li
-          | Your Home Detention Curfew commences on
-          =" "
-          span.entry #{SENT_HDCAD}
-          |  and expires on
-          =" "
-          span.entry #{SENT_CRD}
+    div.smallPaddingBottom
 
-        li
-          | Your supervision on licence commences on
-          =" "
-          span.entry #{SENT_HDCAD}
-          |  and expires on
-          =" "
-          span.entry #{SENT_LED}
-          |  unless this licence is previously revoked.
+    h2 Home Detention Curfew
 
-        li
-          | Your post-sentence supervision period commences on
-          =" "
-          span.entry #{SENT_LED}
-          |  and expires on
-          =" "
-          span.entry #{SENT_TUSED}
+    ol.continue
+      li
+        | You will be subject to a Home Detention Curfew. The objective of the Home Detention Curfew is to help you
+        | manage your return into the community.
 
-        +reportOnRelease(REPORTING_NAME, REPORTING_ADDRESS, REPORTING_AT, REPORTING_ON)
+      +curfewAddress(CURFEW_ADDRESS, '9')
 
-        div.smallPaddingBottom
+      +firstDayCurfew(CURFEW_FIRST_FROM, CURFEW_FIRST_UNTIL)
 
-        h2 Home Detention Curfew
+      include includes/curfewTimes
+      +curfewConditions()
 
-        ol.continue
-          li
-            | You will be subject to a Home Detention Curfew. The objective of the Home Detention Curfew is to help you
-            | manage your return into the community.
+  div.smallPaddingBottom
 
-          +curfewAddress(CURFEW_ADDRESS, '9')
+  h3 Licence Period
 
-          +firstDayCurfew(CURFEW_FIRST_FROM, CURFEW_FIRST_UNTIL)
+  ol.continue
+    li
+      | The objectives of the licence period are to (a) protect the public, (b) prevent re-offending and (c) help
+      | you to resettle successfully into the community. You must place yourself under the supervision of whichever
+      | supervising officer or social worker is nominated for this purpose from time to time.
 
-          include includes/curfewTimes
-          +curfewConditions()
-
-      div.smallPaddingBottom
-
-      h3 Licence Period
-
-      ol.continue
-        li
-          | The objectives of the licence period are to (a) protect the public, (b) prevent re-offending and (c) help
-          | you to resettle successfully into the community. You must place yourself under the supervision of whichever
-          | supervising officer or social worker is nominated for this purpose from time to time.
-
-        li.no-break During your licence period you must:
-          ol.roman.start
-            li Be of good behaviour and not behave in a way which undermines the purpose of the licence period;
-            li Not to commit any offence;
-            li Keep in touch with the supervising officer in accordance with instructions given by the supervising officer;
-            li Receive visits from the supervising officer in accordance with instructions given by the supervising officer;
-
-            li
-              | Reside permanently at an address approved by the supervising officer and obtain the prior permission of
-              | the supervising officer for any stay of one or more nights at a different address;
-
-            li
-              | Not undertake work, or a particular type of work, unless it is approved by the supervising officer and
-              | notify the supervising officer in advance of any proposal to undertake work or a particular type of work;
-
-            li
-              | Not travel outside the United Kingdom, the Channel Islands or the Isle of Man, except with the prior
-              | permission of the supervising officer or for the purposes of immigration deportation or removal;
-
-            div.pre.conditions
-              br
-              | #{CONDITIONS}
+    li.no-break During your licence period you must:
+      ol.roman.start
+        li Be of good behaviour and not behave in a way which undermines the purpose of the licence period;
+        li Not to commit any offence;
+        li Keep in touch with the supervising officer in accordance with instructions given by the supervising officer;
+        li Receive visits from the supervising officer in accordance with instructions given by the supervising officer;
 
         li
-          | The Secretary of State may vary or cancel any of the above conditions, in accordance with Section 250(4) of
-          | the Criminal Justice Act 2003.
+          | Reside permanently at an address approved by the supervising officer and obtain the prior permission of
+          | the supervising officer for any stay of one or more nights at a different address;
 
         li
-          | If you fail to submit yourself to a recall to custody following either a notification of the revocation of
-          | your licence, or remain out of contact with Probation Services for a period of six months, you may be liable to
-          | face a further charge of being unlawfully at large following recall under section 255ZA of the Criminal Justice
-          | Act 2003. This could result in a fine, a sentence of up to two years’ imprisonment, or both.
+          | Not undertake work, or a particular type of work, unless it is approved by the supervising officer and
+          | notify the supervising officer in advance of any proposal to undertake work or a particular type of work;
 
         li
-          | If you fail to comply with any requirement of your licence period (set out above) or
-          | if you otherwise pose a risk to the public, you will be liable to have this licence revoked and be recalled to
-          | custody until the date on which your licence would have otherwise ended. If you are sent back to prison and are
-          | re-released before the end of your licence, you will still be subject to licence conditions until the end of
-          | your sentence.
+          | Not travel outside the United Kingdom, the Channel Islands or the Isle of Man, except with the prior
+          | permission of the supervising officer or for the purposes of immigration deportation or removal;
 
-      +postSentenceSupervison(PSSCONDITIONS, SENT_CRD, SENT_LED, SENT_SED, SENT_TUSED)
+        div.pre.conditions
+          br
+          | #{CONDITIONS}
 
-      +contactPoints(MONITOR, EST_PHONE)
+    li
+      | The Secretary of State may vary or cancel any of the above conditions, in accordance with Section 250(4) of
+      | the Criminal Justice Act 2003.
 
-      h3.underline Explanatory note in respect of your licence
+    li
+      | If you fail to submit yourself to a recall to custody following either a notification of the revocation of
+      | your licence, or remain out of contact with Probation Services for a period of six months, you may be liable to
+      | face a further charge of being unlawfully at large following recall under section 255ZA of the Criminal Justice
+      | Act 2003. This could result in a fine, a sentence of up to two years’ imprisonment, or both.
 
-      p You are being released under the provisions of Chapter 6 of the Criminal Justice Act 2003.
+    li
+      | If you fail to comply with any requirement of your licence period (set out above) or
+      | if you otherwise pose a risk to the public, you will be liable to have this licence revoked and be recalled to
+      | custody until the date on which your licence would have otherwise ended. If you are sent back to prison and are
+      | re-released before the end of your licence, you will still be subject to licence conditions until the end of
+      | your sentence.
 
-      p
-        | You are being released subject to the licence period of a 12 months or longer sentence followed by a
-        | post-sentence supervision period.
+  +postSentenceSupervison(PSSCONDITIONS, SENT_CRD, SENT_LED, SENT_SED, SENT_TUSED)
 
-      p
-        | Your release is also subject to the conditions specified on your licence, all of which have been imposed in
-        | accordance with Chapter 6 of the Act.
+  +contactPoints(MONITOR, EST_PHONE)
 
-      +signatures(APPROVER, CREATION_DATE, OFF_NAME)
+  h3.underline Explanatory note in respect of your licence
+
+  p You are being released under the provisions of Chapter 6 of the Criminal Justice Act 2003.
+
+  p
+    | You are being released subject to the licence period of a 12 months or longer sentence followed by a
+    | post-sentence supervision period.
+
+  p
+    | Your release is also subject to the conditions specified on your licence, all of which have been imposed in
+    | accordance with Chapter 6 of the Act.
