--- a/server/views/licences/vary_hdc_ap_pss.pug
+++ b/server/views/licences/vary_hdc_ap_pss.pug
@@ -1,9 +1,10 @@
-extends licence
+extends vary_licence
 
 block heading
   +heading('LICENCE AND NOTICE OF SUPERVISION')
 
 block content
+
   ol.start
     li
       | Under the provisions of Chapter 6 of the Criminal Justice Act 2003 you are being released on licence followed
@@ -12,7 +13,7 @@ block content
       | relevant purposes of each type of supervision are explained in the sections below.
 
     li
-      | Your Home Detention Curfew commences on
+      | Your Home Detention Curfew commenced on
       =" "
       span.entry #{SENT_HDCAD}
       |  and expires on
@@ -20,10 +21,7 @@ block content
       span.entry #{SENT_CRD}
 
     li
-      | Your supervision on licence commences on
-      =" "
-      span.entry #{SENT_HDCAD}
-      |  and expires on
+      | Your supervision on licence expires on
       =" "
       span.entry #{SENT_LED}
       |  unless this licence is previously revoked.
@@ -32,11 +30,6 @@ block content
       | Your post-sentence supervision period commences on
       =" "
       span.entry #{SENT_LED}
-      |  and expires on
-      =" "
-      span.entry #{SENT_TUSED}
-
-    +reportOnRelease(REPORTING_NAME, REPORTING_ADDRESS, REPORTING_AT, REPORTING_ON)
 
     div.smallPaddingBottom
 
@@ -47,7 +40,7 @@ block content
         | You will be subject to a Home Detention Curfew. The objective of the Home Detention Curfew is to help you
         | manage your return into the community.
 
-      +curfewAddress(CURFEW_ADDRESS, '9')
+      +curfewAddress(CURFEW_ADDRESS, '8')
 
       +firstDayCurfew(CURFEW_FIRST_FROM, CURFEW_FIRST_UNTIL)
 
@@ -119,3 +112,4 @@ block content
   p
     | Your release is also subject to the conditions specified on your licence, all of which have been imposed in
     | accordance with Chapter 6 of the Act.
+
