--- a/server/views/licences/vary_hdc_pss.pug
+++ b/server/views/licences/vary_hdc_pss.pug
@@ -1,9 +1,10 @@
-extends licence
+extends vary_licence
 
 block heading
   +heading('NOTICE OF SUPERVISION')
 
 block content
+
   ol.start
     li
       | Under the provisions of Chapter 6 of the Criminal Justice Act 2003 you are being released on Home Detention
@@ -11,7 +12,7 @@ block content
       | in the sections below.
 
     li
-      | Your Home Detention Curfew commences on
+      | Your Home Detention Curfew commenced on
       =" "
       span.entry #{SENT_HDCAD}
       |  and expires on
@@ -19,14 +20,9 @@ block content
       span.entry #{SENT_CRD}
 
     li
-      | Your post-sentence supervision period commences on
-      =" "
-      span.entry #{SENT_HDCAD}
-      |  and expires on
+      | Your post-sentence supervision period expires on
       =" "
       span.entry #{SENT_TUSED}
-
-    +reportOnRelease(REPORTING_NAME, REPORTING_ADDRESS, REPORTING_AT, REPORTING_ON)
 
     div.smallPaddingBottom
 
@@ -36,9 +32,9 @@ block content
       | You will be subject to a Home Detention Curfew. The objective of the Home Detention Curfew is to help you
       | manage your return into the community.
 
-    +curfewAddress(CURFEW_ADDRESS, '8')
+    +curfewAddress(CURFEW_ADDRESS, '6')
 
-    +firstDayCurfew(CURFEW_FIRST_FROM, CURFEW_FIRST_UNTIL)
+    //+firstDayCurfew(CURFEW_FIRST_FROM, CURFEW_FIRST_UNTIL)
 
     include includes/curfewTimes
 
@@ -51,3 +47,5 @@ block content
   p
     | Your release is also subject to the conditions specified on your licence, all of which have been imposed in
     | accordance with Chapter 6 of the Act.
+
+
